# pydantic-databricks

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/pydantic_databricks/: models.py  sql.py
tests/: test_models.py  test_sql.py
