[project]
name = "pydantic-databricks"
version = "0.1.0"
description = "Databricks helpers for Pydantic models"
authors = [
    {name = "Daniel Tom", email = "daniel.tom@xebia.com"},
]
dependencies = [
    "pydantic>=2.5.2",
]
requires-python = ">= 3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
]
linting = [
    "ruff>=0.1.6",
]
